<resources>
    <string name="app_name">Quizapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="QuizTime">QuizTime</string>
    <string name="Profile">Profile</string>
    <string name="ListOfQuestions">ListOfQuestions</string>
    <string name="NewQuestion">NewQuestion</string>
    <string name="quizapp">QuizApp</string>
    <string name="QuizApp">QuizApp</string>
</resources>